loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:9: error: illegal start of simple expression
  }
  ^Poucet2:10: error: 'while' expected but 'if' found.
  if (bis<3){
  ^Poucet2:16: error: '(' expected but ';' found.
  avance()
^